--- a/src/Styles/Services.scss
+++ b/src/Styles/Services.scss
@@ -4,7 +4,7 @@ $activeGrey: rgb(115, 142, 165);
 .serviceCardHeader {
   background-color: $bg-color;
   max-width: 2000px;
-  min-width: 360px;
+  min-width: 320px;
   max-height: 600px;
   height: 40px;
   width: auto;
@@ -24,7 +24,7 @@ $activeGrey: rgb(115, 142, 165);
 
 .services1 {
   max-width: 2000px;
-  min-width: 360px;
+  min-width: 320px;
   max-height: 1900px;
   height: auto;
   width: auto;
